<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App name -->
    <string name="app_name">Just Java</string>

    <!-- Toppings -->
    <string name="Whipped">Whipped Cream</string>
    <string name="Chocolate">Chocolate</string>

    <!-- View Text -->
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="hint">Name</string>
    <string name="Toppings">Toppings</string>
    <string name="price">Order Summary</string>
    <string name="order_button">Order</string>

    <!-- Order Summary Text -->
    <string name="quantityCheckout">Quantity:&#160;</string>
    <string name="email_subject">Just Java order for:&#160;</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="cream_query">Add Whipped Cream?&#160;</string>
    <string name="chocolate_query">Add Chocolate?&#160;</string>
    <string name="total">Total:&#160;</string>
    <string name="thank_you_message">Thank you!</string>


</resources>
