<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.android.justjava.MainActivity">
        <EditText
            android:id="@+id/nameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="text"/>
        <TextView style="@style/HeaderTextStyle"
            android:text="@string/Toppings" />
        <CheckBox style="@style/checkBoxStyle"
            android:id="@+id/whipped"
            android:text="@string/Whipped"/>
        <CheckBox style="@style/checkBoxStyle"
            android:id="@+id/chocolate"
            android:text="@string/Chocolate"/>
        <TextView style="@style/HeaderTextStyle"
            android:id="@+id/quantity"
            android:text="@string/quantity"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button style="@style/plus_minus_buttons"
                android:id="@+id/decrement"
                android:text="@string/minus"
                android:onClick="decrement"
                android:layout_marginRight="@dimen/plus_minus_margin"
                android:layout_marginEnd="@dimen/plus_minus_margin"/>
            <TextView style="@style/normalTextStyle"
                android:id="@+id/quantity_text_view"
                android:layout_marginRight="@dimen/plus_minus_margin"
                android:layout_marginEnd="@dimen/plus_minus_margin"/>
            <Button style="@style/plus_minus_buttons"
                android:id="@+id/increment"
                android:text="@string/plus"
                android:onClick="increment" />

        </LinearLayout>
        <TextView style="@style/HeaderTextStyle"
            android:id="@+id/price"
            android:text="@string/price" />
        <TextView style="@style/normalTextStyle"
            android:id="@+id/price_text_view"
            android:layout_marginBottom="@dimen/margin_separation" />
        <Button style="@style/button"
            android:id="@+id/button"
            android:text="@string/order_button"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>
